--- a/src/main/resources/dbfh.properties
+++ b/src/main/resources/dbfh.properties
@@ -20,7 +20,7 @@ password=root
 # mysqldump 路径 Linux
 dbpath = /usr/local/mysql/bin/
 # 备份文件存放位置 Linux
-sqlFilePath =/Users/hongkai/Development/NswtGithub/ProcessIntegration Platform/target/nplatform-0.0.1-SNAPSHOT/data/sqlbackup/
+sqlFilePath =/Users/hongkai/Development/NswtGithub/ProcessIntegration Platform/db/
 # mysqldump 路径 Windows
 #dbpath = D\://gzsoft//mysql//MySQL Server 5.6//bin//
 # 备份文件存放位置 Windows
