--- a/src/main/resources/dbfh.properties
+++ b/src/main/resources/dbfh.properties
@@ -12,11 +12,11 @@ dbAddress=localhost
 #端口
 dbport=3306
 # 数据库名称
-databaseName=PIP
+databaseName=pip
 # 数据库用户名
 username=root
 # 数据库密码
-password=root
+password=100200
 # mysqldump 路径 Linux
 dbpath = /usr/local/mysql/bin/
 # 备份文件存放位置 Linux
