--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,8 +1,8 @@
 #数据源1
-url:jdbc:mysql://localhost:3306/PIP?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
+url:jdbc:mysql://localhost:3306/pip?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 driverClassName:com.mysql.jdbc.Driver
 username:root
-password:root
+password:100200
 filters:stat
 maxActive:20
 initialSize:1
@@ -21,10 +21,10 @@ removeAbandonedTimeout:1800
 logAbandoned:true
 
 #数据源2
-url2:jdbc:mysql://localhost:3306/PIP?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
+url2:jdbc:mysql://localhost:3306/pip?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 driverClassName2:com.mysql.jdbc.Driver
 username2:root
-password2:root
+password2:100200
 filters2:stat
 maxActive2:20
 initialSize2:1
