--- a/pom.xml
+++ b/pom.xml
@@ -854,11 +854,11 @@
 		</repository>
 	</repositories>
 	<!--插件地址-->
-	<pluginRepositories>
+	<!--<pluginRepositories>
 		<pluginRepository>
 			<id>releases</id>
 			<name>Releases</name>
-			<!--<url>http://192.168.2.86:9091/nexus/content/repositories/releases/</url>-->
+			&lt;!&ndash;<url>http://192.168.2.86:9091/nexus/content/repositories/releases/</url>&ndash;&gt;
 			<url>http://123.103.90.5:9091/nexus/content/repositories/releases/</url>
 			<releases>
 				<enabled>true</enabled>
@@ -870,7 +870,7 @@
 		<pluginRepository>
 			<id>snapshots</id>
 			<name>Snapshots</name>
-			<!--<url>http://192.168.2.86:9091/nexus/content/repositories/snapshots/</url>-->
+			&lt;!&ndash;<url>http://192.168.2.86:9091/nexus/content/repositories/snapshots/</url>&ndash;&gt;
 			<url>http://123.103.90.5:9091/nexus/content/repositories/snapshots/</url>
 			<releases>
 				<enabled>true</enabled>
@@ -879,20 +879,20 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</pluginRepository>
-	</pluginRepositories>
+	</pluginRepositories>-->
 	<!--分发构建地址-->
-	<distributionManagement>
+	<!--<distributionManagement>
 		<repository>
 			<id>releases</id>
 			<name>Releases</name>
-			<!--<url>http://192.168.2.86:9091/nexus/content/repositories/releases/</url>-->
+			&lt;!&ndash;<url>http://192.168.2.86:9091/nexus/content/repositories/releases/</url>&ndash;&gt;
 			<url>http://123.103.90.5:9091/nexus/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>Snapshots</name>
-			<!--<url>http://192.168.2.86:9091/nexus/content/repositories/snapshots/</url>-->
+			&lt;!&ndash;<url>http://192.168.2.86:9091/nexus/content/repositories/snapshots/</url>&ndash;&gt;
 			<url>http://123.103.90.5:9091/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
-	</distributionManagement>
+	</distributionManagement>-->
 </project>
